--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "Lightweight News Bot For WhatsApp Developed By Udavin",
     "main": "index.js",
     "scripts": {
-        "start": "node index.js",
+        "start": "pm2 start index.js --deep-monitoring --attach --name news-bot",
         "stop": "pm2 stop news-bot",
         "restart": "pm2 restart news-bot"
     },
